[package]
name = "Checkout_Webserver"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.4"
tera = "1.20.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }