[package]
name = "Checkout_Webserver"
version = "0.1.2"
edition = "2024"

[dependencies]

tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.4"
tera = "1.20.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version="0.8.6", features = ["macros", "chrono", "sqlite", "runtime-tokio", "tls-native-tls"] }
chrono = { version="0.4.41", features=["serde"]}
anyhow = "1.0.98"
dotenvy = "0.15.7"
assertables = "9.8.1"
regex = "1.11.1"